samples/_failures_safe/1761527907_618969_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c09db66c.c: In function ‘main’:
./samples/SAFE/__tmp_c09db66c.c:183:39: error: expected ‘)’ at end of input
  183 |             printf("Token %d: ", j + 1
      |                   ~                   ^
      |                                       )
./samples/SAFE/__tmp_c09db66c.c:183:13: error: expected declaration or statement at end of input
  183 |             printf("Token %d: ", j + 1
      |             ^~~~~~
./samples/SAFE/__tmp_c09db66c.c:183:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c09db66c.c:183:13: error: expected declaration or statement at end of input
